# musicGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  databricks.md  main.py  model.json  readme  training.py
include/: JuceBootstrap.h  PluginPool.h  RenderPipeline.h  StreamingProcessor.h
presets/: autographgrandpiano.vstpreset  celloCmelancholy.vstpreset  decay.vstpreset  ensemblestrings.vstpreset  glassgrandpiano.vstpreset  lonelyexistenceofamarsrover.vstpreset  overcloudsambientguitars.vstpreset  pad004.vstpreset  pianopad.vstpreset  softpiano.vstpreset  softplucks.vstpreset  swells.vstpreset  swellsensemble.vstpreset  vintagedrums1975kit.vstpreset  vintagedrumsanimalkit.vstpreset  wrapfracturevoices.vstpreset
src/: JuceBootstrap.cpp  PluginPool.cpp  RenderPipeline.cpp  StreamingProcessor.cpp  main.cpp
